--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
+    "graphql": "^16.9.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "react": "^18",
