--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@graphcms/rich-text-react-renderer": "^0.6.2",
     "@graphcms/rich-text-types": "^0.5.1",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.25",
+    "@react-email/tailwind": "^0.1.0",
     "@relume_io/relume-tailwind": "^0.5.1",
     "@relume_io/relume-ui": "^0.5.1",
     "class-variance-authority": "^0.7.0",
@@ -23,9 +27,12 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "resend": "^4.0.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
